--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,6 +6,19 @@
     padding: 1rem;
 }
 
-.content h1 {
+.pokemons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: none;
     margin: 0;
+    padding: 0;
+}
+
+.pokemons li {
+    border-radius: 1rem;
+    margin: .5rem;
+    padding: 1rem;
+    height: 100px;
+    background-color: #14A06F;
+    color: #FFF;
 }
