--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 .content {
@@ -15,10 +16,16 @@
 }
 
 .pokemons li {
+    display: flex;
+    flex-direction: column;
     border-radius: 1rem;
     margin: .5rem;
     padding: 1rem;
-    height: 100px;
     background-color: #14A06F;
     color: #FFF;
+}
+
+.pokemons li img {
+    max-width: 100%;
+    height: 100px;
 }
