--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,17 +15,50 @@
     padding: 0;
 }
 
-.pokemons li {
+.pokemon {
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
     margin: .5rem;
     padding: 1rem;
-    background-color: #14A06F;
+    background-color: #49D0B0;
     color: #FFF;
 }
 
-.pokemons li img {
+.pokemon .number {
+    color: #000;
+    opacity: .3;
+    text-align: right;
+    font-size: .625rem;
+}
+
+.pokemon .name {
+    margin-bottom: .25rem;
+}
+
+.pokemon .detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .types .type {
+    background-color: #61E1CA;
+    color: #FFF;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+}
+
+.pokemon .detail img {
     max-width: 100%;
-    height: 100px;
+    height: 78px;
 }
