--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -61,4 +61,5 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 78px;
+    transform: scaleX(-1); /*Espelha/inverte a imagem no eixo X*/
 }
